--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <resources>
+    <string name="player_name_placeholder" translatable="false">"12345678901"</string>
+    <string name="_000" translatable="false">-000</string>
     <!--  Translations V2.0.0  -->
     <string name="app_name">Mahjong Scoring MCR</string>
     <string name="close_drawer">Close menu</string>
