--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -181,4 +181,8 @@
     <string name="description_last_tile_claim">和打出的最后一张牌</string>
     <string name="description_out_with_replacement_tile">杠牌时，从牌墙补上一张牌成和牌</string>
     <string name="description_robbing_the_kong">和他人自拿开明杠的牌</string>
+
+    <!--  Translations V2.1.0  -->
+    <string name="throw_dice">扔骰子</string>
+    <string name="start_new_game">开始新游戏</string>
 </resources>
