--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -185,4 +185,10 @@
     <!--  Translations V2.1.0  -->
     <string name="throw_dice">Lanzar los dados</string>
     <string name="start_new_game">Empezar un nuevo juego</string>
+    <string name="self_abr">M</string>
+    <string name="direct_abr">D</string>
+    <string name="indirect_abr">I</string>
+    <string name="_1st">1·</string>
+    <string name="_2nd">2·</string>
+    <string name="_3rd">3·</string>
 </resources>
