--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -188,7 +188,7 @@
     <string name="self_abr">自摸</string>
     <string name="direct_abr">直接的</string>
     <string name="indirect_abr">其他</string>
-    <string name="_1st">1·</string>
-    <string name="_2nd">2·</string>
-    <string name="_3rd">3·</string>
+    <string name="_1st">第一</string>
+    <string name="_2nd">第二</string>
+    <string name="_3rd">第三</string>
 </resources>
