--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -188,7 +188,7 @@
     <string name="self_abr">M</string>
     <string name="direct_abr">D</string>
     <string name="indirect_abr">I</string>
-    <string name="_1st">1·</string>
-    <string name="_2nd">2·</string>
-    <string name="_3rd">3·</string>
+    <string name="_1st">1°</string>
+    <string name="_2nd">2°</string>
+    <string name="_3rd">3°</string>
 </resources>
