Added go to MM and EMA websites

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -191,4 +191,6 @@
     <string name="_1st">1°</string>
     <string name="_2nd">2°</string>
     <string name="_3rd">3°</string>
+    <string name="mahjong_madrid_web">Mahjong Madrid web</string>
+    <string name="ema_web">EMA web</string>
 </resources>
