--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,4 +193,6 @@
     <string name="_1st">1st</string>
     <string name="_2nd">2nd</string>
     <string name="_3rd">3rd</string>
+    <string name="mahjong_madrid_web">Mahjong Madrid web</string>
+    <string name="ema_web">EMA web</string>
 </resources>
