--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="open_drawer">Open menu</string>
     <string name="old_games">Old games</string>
     <string name="combinations">Combinations</string>
-    <string name="green_book">Green Book</string>
+    <string name="green_book">Green Book (pdf)</string>
     <string name="rate">Rate app</string>
     <string name="contact">Contact</string>
     <string name="press_again_to_exit">Press again to exit</string>
@@ -193,6 +193,6 @@
     <string name="_1st">1st</string>
     <string name="_2nd">2nd</string>
     <string name="_3rd">3rd</string>
-    <string name="mahjong_madrid_web">Mahjong Madrid web</string>
-    <string name="ema_web">EMA web</string>
+    <string name="mahjong_madrid_web">Mahjong Madrid (web)</string>
+    <string name="ema_web">EMA (web)</string>
 </resources>
