--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,7 +22,6 @@
     <string name="old_games">Partidas antiguas</string>
     <string name="combinations">Combinaciones</string>
     <string name="green_book_en">Libro Verde (PDF en Inglés)</string>
-    <string name="rate">Valora la app</string>
     <string name="contact">Contacto</string>
     <string name="press_again_to_exit">Pulsa de nuevo para salir</string>
     <string name="theres_no_games_yet_start_one">No hay partidas aún.\nEmpieza una!</string>
@@ -39,7 +38,6 @@
     <string name="table">Mesa</string>
     <string name="game">Partida</string>
     <string name="totals">Totales</string>
-    <string name="points">Puntos</string>
     <string name="number_symbol">#</string>
     <string name="final_results">Resultado final</string>
     <string name="cancel_penalties">Cancelar penalizaciones</string>
@@ -55,10 +53,6 @@
     <string name="player_south_name">Nombre Jugador Sur</string>
     <string name="player_west_name">Nombre Jugador Oeste</string>
     <string name="player_north_name">Nombre Jugador Norte</string>
-    <string name="player_east">Jugador Este</string>
-    <string name="player_south">Jugador Sur</string>
-    <string name="player_west">Jugador Oeste</string>
-    <string name="player_north">Jugador Norte</string>
     <string name="player_one">Nombre A</string>
     <string name="player_two">Nombre B</string>
     <string name="player_three">Nombre C</string>
@@ -198,7 +192,7 @@
     <string name="self_pick">Del muro</string>
     <string name="direct">Directo</string>
     <string name="indirect">Indirecto</string>
-    <string name="to_be_by">Para ser: \ Por:</string>
+    <string name="to_be_by">Para ser: \\ Por:</string>
     <string name="points_needed">Puntos necesarios:</string>
     <string name="hide_diffs_calcs">Ocultar cálculos</string>
     <string name="show_diffs_calcs">Mostrar cálculos</string>
