--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,7 +21,7 @@
     <string name="open_drawer">Abrir menú</string>
     <string name="old_games">Partidas antiguas</string>
     <string name="combinations">Combinaciones</string>
-    <string name="green_book">Libro Verde (pdf)</string>
+    <string name="green_book_en">Libro Verde (PDF en Inglés)</string>
     <string name="rate">Valora la app</string>
     <string name="contact">Contacto</string>
     <string name="press_again_to_exit">Pulsa de nuevo para salir</string>
@@ -202,4 +202,5 @@
     <string name="points_needed">Puntos necesarios:</string>
     <string name="hide_diffs_calcs">Ocultar cálculos</string>
     <string name="show_diffs_calcs">Mostrar cálculos</string>
+    <string name="green_book_es">Libro Verde (PDF en Español)</string>
 </resources>
