--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="open_drawer">Open menu</string>
     <string name="old_games">Old games</string>
     <string name="combinations">Combinations</string>
-    <string name="green_book">Green Book (pdf)</string>
+    <string name="green_book_en">Green Book (English PDF)</string>
     <string name="rate">Rate app</string>
     <string name="contact">Contact</string>
     <string name="press_again_to_exit">Press again to exit</string>
@@ -204,4 +204,5 @@
     <string name="points_needed">Points needed:</string>
     <string name="hide_diffs_calcs">Hide diffs calcs</string>
     <string name="show_diffs_calcs">Show diffs calcs</string>
+    <string name="green_book_es">Green Book (Spanish PDF)</string>
 </resources>
