--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -197,4 +197,7 @@
     <string name="hide_diffs_calcs">隐藏计算结果</string>
     <string name="show_diffs_calcs">显示计算结果</string>
     <string name="green_book_es">绿皮书 (西班牙语 PDF)</string>
+    <string name="diffsCalculator">差异计算器</string>
+    <string name="diff">需要积分</string>
+    <string name="i_think_is_enough_jajaja">我想这已经足够了，对吗? 🤣</string>
 </resources>
