--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -111,7 +111,7 @@
     <string name="two_melded_kongs">Dos kongs expuestos</string>
     <string name="last_tile">Última ficha</string>
     <string name="all_pungs">Todo pungs</string>
-    <string name="half_flush">Mano semipuro</string>
+    <string name="half_flush">Mano semipura</string>
     <string name="mixed_shifted_chows">Chows escalonados mixtos</string>
     <string name="all_types">Todas las familias</string>
     <string name="melded_hand">Mano expuesta</string>
