--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -201,4 +201,5 @@
     <string name="diffsCalculator">差异计算器</string>
     <string name="diff">需要积分</string>
     <string name="i_think_is_enough_jajaja">我想这已经足够了，对吗? 🤣</string>
+    <string name="send_email">发电子邮件</string>
 </resources>
