--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,4 +203,5 @@
     <string name="diffsCalculator">Diffs Calculator</string>
     <string name="diff">Needed points</string>
     <string name="i_think_is_enough_jajaja">I think this is enough, isn\'t it? 🤣</string>
+    <string name="send_email">Send Email</string>
 </resources>
