--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -199,7 +199,7 @@
     <string name="show_diffs_calcs">Mostrar cálculos</string>
     <string name="green_book_es">Libro Verde (PDF en Español)</string>
     <string name="diffsCalculator">Calculadora de diferencias</string>
-    <string name="diff">Needed points</string>
+    <string name="diff">Puntos necesarios</string>
     <string name="i_think_is_enough_jajaja">Creo que ya es suficiente, ¿no? 🤣</string>
     <string name="send_email">Enviar correo</string>
 </resources>
