--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -179,7 +179,7 @@
 
     <!--  Translations V2.1.0  -->
     <string name="throw_dice">Lanzar los dados</string>
-    <string name="start_new_game">Empezar un nuevo juego</string>
+    <string name="start_new_game">Empezar un nueva partida</string>
     <string name="self_abr">M</string>
     <string name="direct_abr">D</string>
     <string name="indirect_abr">I</string>
@@ -193,7 +193,7 @@
     <string name="self_pick">Del muro</string>
     <string name="direct">Directo</string>
     <string name="indirect">Indirecto</string>
-    <string name="to_be_by">Para ser: \\ Por:</string>
+    <string name="to_be_by">Para ser \\ Por</string>
     <string name="points_needed">Puntos necesarios:</string>
     <string name="hide_diffs_calcs">Ocultar cálculos</string>
     <string name="show_diffs_calcs">Mostrar cálculos</string>
@@ -202,4 +202,8 @@
     <string name="diff">Puntos necesarios</string>
     <string name="i_think_is_enough_jajaja">Creo que ya es suficiente, ¿no? 🤣</string>
     <string name="send_email">Enviar correo</string>
+
+    <!--  Translations V2.1.1  -->
+    <string name="export_games">Exportar partidas</string>
+    <string name="double_quotes_warn">⚠️ Las comillas no están permitidas (se borrarán al guardar)</string>
 </resources>
