--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -193,7 +193,7 @@
     <string name="self_pick">自选</string>
     <string name="direct">直接的</string>
     <string name="indirect">间接</string>
-    <string name="to_be_by">成为: \\ 经过:</string>
+    <string name="to_be_by">成为 \\ 经过</string>
     <string name="points_needed">需要积分:</string>
     <string name="hide_diffs_calcs">隐藏计算结果</string>
     <string name="show_diffs_calcs">显示计算结果</string>
@@ -202,4 +202,8 @@
     <string name="diff">需要积分</string>
     <string name="i_think_is_enough_jajaja">我想这已经足够了，对吗? 🤣</string>
     <string name="send_email">发电子邮件</string>
+
+    <!--  Translations V2.1.1  -->
+    <string name="export_games">导出游戏</string>
+    <string name="double_quotes_warn">⚠️ 不允许使用双引号 (保存时将被删除)</string>
 </resources>
