Added share game results feature

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -205,6 +205,12 @@
 
     <!--  Translations V2.1.1  -->
     <string name="export_games">Exportar partidas</string>
+    <string name="share_files_using">Compartir archivos usando:</string>
     <string name="double_quotes_warn">⚠️ Las comillas no están permitidas (se borrarán al guardar)</string>
     <string name="game_name">Nombre de la partida</string>
+    <string name="share">Compartir</string>
+    <string name="share_game">Compartir partida</string>
+    <string name="complete_game">Partida completa</string>
+    <string name="share_game_using">Compartir partida usando:</string>
+    <string name="_4th">4°</string>
 </resources>
