--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,6 +207,12 @@
 
     <!--  Translations V2.1.1  -->
     <string name="export_games">Export games</string>
+    <string name="share_files_using">Share files using:</string>
     <string name="double_quotes_warn">⚠️ Double quotes are not allowed (will be erased on save)</string>
     <string name="game_name">Game name</string>
+    <string name="share">Share</string>
+    <string name="share_game">Share game</string>
+    <string name="complete_game">Full game</string>
+    <string name="share_game_using">Share game using:</string>
+    <string name="_4th">4th</string>
 </resources>
