--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -213,4 +213,5 @@
     <string name="complete_game">完整的比赛</string>
     <string name="share_game_using">使用以下方式分享游戏:</string>
     <string name="_4th">第四</string>
+    <string name="from">从</string>
 </resources>
