--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -213,4 +213,5 @@
     <string name="complete_game">Partie complète</string>
     <string name="share_game_using">Partager la partie en utilisant:</string>
     <string name="_4th">4ème</string>
+    <string name="from">de</string>
 </resources>
