--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,4 +215,5 @@
     <string name="complete_game">Full game</string>
     <string name="share_game_using">Share game using:</string>
     <string name="_4th">4th</string>
+    <string name="from">from</string>
 </resources>
