--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="green_book_en">Green Book (English PDF)</string>
     <string name="contact">Contact</string>
     <string name="press_again_to_exit">Press again to exit</string>
-    <string name="theres_no_games_yet_start_one">There is no games yet.\nStart one!</string>
+    <string name="theres_no_games_yet_start_one">There aren\'t games yet.\nStart one!</string>
     <string name="best_hand">Best hand</string>
     <string name="rounds">Rounds</string>
     <string name="delete">Delete</string>
