--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -195,8 +195,8 @@
     <string name="indirect">Indirecto</string>
     <string name="to_be_by">Para ser \\ Por</string>
     <string name="points_needed">Puntos necesarios:</string>
-    <string name="hide_diffs_calcs">Ocultar cálculos</string>
-    <string name="show_diffs_calcs">Mostrar cálculos</string>
+    <string name="disable_diffs_calcs">Deshabilitar cálculos</string>
+    <string name="enable_diffs_calcs">Habilitar cálculos</string>
     <string name="green_book_es">Libro Verde (PDF en Español)</string>
     <string name="diffsCalculator">Calculadora de diferencias</string>
     <string name="diff">Puntos necesarios</string>
