--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,14 +205,14 @@
     <string name="i_think_is_enough_jajaja">I think this is enough, isn\'t it? 🤣</string>
     <string name="send_email">Send Email</string>
 
-    <!--  Translations V2.1.1  -->
+    <!--  Translations V2.2.0  -->
     <string name="export_games">Export games</string>
     <string name="share_files_using">Share files using:</string>
     <string name="double_quotes_warn">⚠️ Double quotes are not allowed (will be erased on save)</string>
     <string name="game_name">Game name</string>
     <string name="share">Share</string>
     <string name="share_game">Share game</string>
-    <string name="complete_game">Full game</string>
+    <string name="share_games">Share games</string>
     <string name="share_game_using">Share game using:</string>
     <string name="_4th">4th</string>
     <string name="from">From</string>
@@ -220,4 +220,10 @@
     <string name="penalties">Penalties</string>
     <string name="rounds_dont_count_penalties">Rounds totals don\'t take penalties in account</string>
     <string name="partials">Partials</string>
+    <string name="plain_text">Plain text</string>
+    <string name="table_csv">Table (CSV file)</string>
+    <string name="round">Round</string>
+    <string name="games">Games</string>
+    <string name="name">Name</string>
+    <string name="player_abbr">P</string>
 </resources>
